# MLOps_Hacakthon

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
Part N°1_MachineLearning/Data_Preparation_Modeling/: Model.ipynb  Untitled-1.ipynb  final_kmeans_model0.1.0.pkl
